[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timewarp"
description = "Mock FHIR data files and utilities for time warping."
dynamic = ["version"]
dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-datadir",
]

[tool.setuptools]
packages = ["timewarp"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --maxfail=5 --tb=short"
testpaths = ["tests"]

[tool.flake8]
max-line-length = 100
